@@ -1,0 +1,2 @@
+test-download-transaction-list="transactions": {"booked": [{"transactionId": "tIrShGSFRAouD5-5pzFaQI","endToEndId": "20180625TAAA002","bookingDate": "2019-06-07","valueDate": "2019-06-07","transactionAmount": {"currency": "EUR","amount":"-100.00"},"creditorName": "Patrick Brueckner","creditorAccount": {"iban": "DE23760700240234367800","currency": "EUR"},"debtorAccount": {"iban": "DE80760700240271232400","currency": "EUR"},"remittanceInformationUnstructured": "Payment"},{"transactionId": "UTXbiUVpTEUg2fogrfXVmE","endToEndId": "20180625TAAA001","bookingDate": "2019-06-07","valueDate": "2019-06-07","transactionAmount": {"currency": "EUR","amount": "-150.00"},"creditorName": "Maria Brueckner","creditorAccount":{"iban": "DE67760700240243265400","currency": "EUR"},"debtorAccount": {"iban": "DE80760700240271232400","currency": "EUR"},"remittanceInformationUnstructured": "Payment"},{"transactionId": "dB4E-hTqR7MrDJo0vJYLR4","bookingDate": "2019-06-07","valueDate": "2019-06-07","transactionAmount": {"currency": "EUR","amount": "-2300.00"},"creditorName": "multiple","debtorAccount": {"iban": "DE80760700240271232400","currency": "EUR"}},{"transactionId":"N4zizaAzTyMnY9lnyFZfeM","bookingDate": "2019-06-07","valueDate": "2019-06-07","transactionAmount": {"currency": "EUR","amount": "-250.00"},"creditorName": "multiple","debtorAccount": {"iban": "DE80760700240271232400","currency": "EUR"}},{"transactionId": "ZlXZJMUuRU4h3J_NZ6cihw","endToEndId": "20180614T110000","bookingDate": "2019-06-07","valueDate": "2019-06-07","transactionAmount": {"currency": "EUR","amount": "2300.00"},"creditorName": "Anton Brueckner","creditorAccount": {"iban": "DE80760700240271232400","currency": "EUR"},"debtorAccount": {"iban": "DE38760700240320465700","currency": "EUR"},"remittanceInformationUnstructured": "Payment"},{"transactionId": "zI-AXA7_S3ss4d7wmHWGvc","endToEndId": "20180602T101000","bookingDate": "2019-06-07","valueDate": "2019-06-07","transactionAmount": {"currency": "EUR","amount": "-900.00"},"creditorName": "Rainer Maier","creditorAccount": {"iban":"DE84100100100568753108","currency": "EUR"},"debtorAccount": {"iban": "DE80760700240271232400","currency": "EUR"},"remittanceInformationUnstructured": "Payment"},{"transactionId": "XANyEaupTPIiEiunMHmz2I","endToEndId":"20180601T131000","bookingDate": "2019-06-07","valueDate": "2019-06-07","transactionAmount": {"currency": "EUR","amount": "-700.00"},"creditorName": "Max Musterman","creditorAccount": {"iban": "DE38760700240320465700","currency":"EUR"},"debtorAccount": {"iban": "DE80760700240271232400","currency": "EUR"},"remittanceInformationUnstructured": "Payment"}],"_links": {"account": {"href": "http://localhost:8089/v1/accounts/PZbWwZLwQZIiEmk2zoIotA"},"balances": {"href": "http://localhost:8089/v1/accounts/PZbWwZLwQZIiEmk2zoIotA/balances"}}}
+test-transaction-status-xml-body=<Document xmlns="urn:iso:std:iso:20022:tech:xsd:pain.002.001.03"><CstmrPmtStsRpt><GrpHdr><MsgId>4572457256725689726906</MsgId><CreDtTm>2017-02-14T20:24:56.021Z</CreDtTm><DbtrAgt><FinInstnId><BIC>ABCDDEFF</BIC></FinInstnId></DbtrAgt><CdtrAgt><FinInstnId><BIC>DCBADEFF</BIC></FinInstnId></CdtrAgt></GrpHdr><OrgnlGrpInfAndSts><OrgnlMsgId>MIPI-123456789RI-123456789</OrgnlMsgId><OrgnlMsgNmId>pain.001.001.03</OrgnlMsgNmId><OrgnlCreDtTm>2017-02-14T20:23:34.000Z</OrgnlCreDtTm><OrgnlNbOfTxs>1</OrgnlNbOfTxs><OrgnlCtrlSum>123</OrgnlCtrlSum><GrpSts>ACCT</GrpSts></OrgnlGrpInfAndSts><OrgnlPmtInfAndSts><OrgnlPmtInfId>BIPI-123456789RI-123456789</OrgnlPmtInfId><OrgnlNbOfTxs>1</OrgnlNbOfTxs><OrgnlCtrlSum>123</OrgnlCtrlSum><PmtInfSts>ACCT</PmtInfSts></OrgnlPmtInfAndSts></CstmrPmtStsRpt></Document>
