@@ -1,1 +1,0 @@
-test-download-transaction-list="transactions": {"booked": [{"transactionId": "tIrShGSFRAouD5-5pzFaQI","endToEndId": "20180625TAAA002","bookingDate": "2019-06-07","valueDate": "2019-06-07","transactionAmount": {"currency": "EUR","amount":"-100.00"},"creditorName": "Patrick Brueckner","creditorAccount": {"iban": "DE23760700240234367800","currency": "EUR"},"debtorAccount": {"iban": "DE80760700240271232400","currency": "EUR"},"remittanceInformationUnstructured": "Payment"},{"transactionId": "UTXbiUVpTEUg2fogrfXVmE","endToEndId": "20180625TAAA001","bookingDate": "2019-06-07","valueDate": "2019-06-07","transactionAmount": {"currency": "EUR","amount": "-150.00"},"creditorName": "Maria Brueckner","creditorAccount":{"iban": "DE67760700240243265400","currency": "EUR"},"debtorAccount": {"iban": "DE80760700240271232400","currency": "EUR"},"remittanceInformationUnstructured": "Payment"},{"transactionId": "dB4E-hTqR7MrDJo0vJYLR4","bookingDate": "2019-06-07","valueDate": "2019-06-07","transactionAmount": {"currency": "EUR","amount": "-2300.00"},"creditorName": "multiple","debtorAccount": {"iban": "DE80760700240271232400","currency": "EUR"}},{"transactionId":"N4zizaAzTyMnY9lnyFZfeM","bookingDate": "2019-06-07","valueDate": "2019-06-07","transactionAmount": {"currency": "EUR","amount": "-250.00"},"creditorName": "multiple","debtorAccount": {"iban": "DE80760700240271232400","currency": "EUR"}},{"transactionId": "ZlXZJMUuRU4h3J_NZ6cihw","endToEndId": "20180614T110000","bookingDate": "2019-06-07","valueDate": "2019-06-07","transactionAmount": {"currency": "EUR","amount": "2300.00"},"creditorName": "Anton Brueckner","creditorAccount": {"iban": "DE80760700240271232400","currency": "EUR"},"debtorAccount": {"iban": "DE38760700240320465700","currency": "EUR"},"remittanceInformationUnstructured": "Payment"},{"transactionId": "zI-AXA7_S3ss4d7wmHWGvc","endToEndId": "20180602T101000","bookingDate": "2019-06-07","valueDate": "2019-06-07","transactionAmount": {"currency": "EUR","amount": "-900.00"},"creditorName": "Rainer Maier","creditorAccount": {"iban":"DE84100100100568753108","currency": "EUR"},"debtorAccount": {"iban": "DE80760700240271232400","currency": "EUR"},"remittanceInformationUnstructured": "Payment"},{"transactionId": "XANyEaupTPIiEiunMHmz2I","endToEndId":"20180601T131000","bookingDate": "2019-06-07","valueDate": "2019-06-07","transactionAmount": {"currency": "EUR","amount": "-700.00"},"creditorName": "Max Musterman","creditorAccount": {"iban": "DE38760700240320465700","currency":"EUR"},"debtorAccount": {"iban": "DE80760700240271232400","currency": "EUR"},"remittanceInformationUnstructured": "Payment"}],"_links": {"account": {"href": "http://localhost:8089/v1/accounts/PZbWwZLwQZIiEmk2zoIotA"},"balances": {"href": "http://localhost:8089/v1/accounts/PZbWwZLwQZIiEmk2zoIotA/balances"}}}
