@@ -47,6 +47,7 @@ public class BulkPaymentSpiImplTest {
     private static final SpiContextData SPI_CONTEXT_DATA = TestSpiDataProvider.getSpiContextData();
     private static final String PAYMENT_ID = "c966f143-f6a2-41db-9036-8abaeeef3af7";
     private static final byte[] CONSENT_DATA_BYTES = "consent_data".getBytes();
+    private static final String JSON_ACCEPT_MEDIA_TYPE = "application/json";
 
     private BulkPaymentSpiImpl paymentSpi;
 
@@ -82,7 +83,7 @@ public class BulkPaymentSpiImplTest {
                                     .payload(payment)
                                     .build());
 
-        paymentSpi.getPaymentById(SPI_CONTEXT_DATA, payment, spiAspspConsentDataProvider);
+        paymentSpi.getPaymentById(SPI_CONTEXT_DATA, JSON_ACCEPT_MEDIA_TYPE, payment, spiAspspConsentDataProvider);
 
         verify(paymentService, times(1)).getPaymentById(eq(payment),
                                                         eq(spiAspspConsentDataProvider), eq(BulkPaymentTO.class),
@@ -92,15 +93,15 @@ public class BulkPaymentSpiImplTest {
     @Test
     public void getPaymentStatusById() {
         when(spiAspspConsentDataProvider.loadAspspConsentData()).thenReturn(CONSENT_DATA_BYTES);
-        when(paymentService.getPaymentStatusById(PaymentTypeTO.BULK, PAYMENT_ID, TransactionStatus.RCVD, CONSENT_DATA_BYTES))
+        when(paymentService.getPaymentStatusById(PaymentTypeTO.BULK, JSON_ACCEPT_MEDIA_TYPE, PAYMENT_ID, TransactionStatus.RCVD, CONSENT_DATA_BYTES))
                 .thenReturn(SpiResponse.<SpiGetPaymentStatusResponse>builder()
-                                    .payload(new SpiGetPaymentStatusResponse(TransactionStatus.RCVD, false))
+                                    .payload(new SpiGetPaymentStatusResponse(TransactionStatus.RCVD, false, SpiGetPaymentStatusResponse.RESPONSE_TYPE_JSON, null))
                                     .build());
 
-        paymentSpi.getPaymentStatusById(SPI_CONTEXT_DATA, payment, spiAspspConsentDataProvider);
+        paymentSpi.getPaymentStatusById(SPI_CONTEXT_DATA, JSON_ACCEPT_MEDIA_TYPE, payment, spiAspspConsentDataProvider);
 
         verify(spiAspspConsentDataProvider, times(1)).loadAspspConsentData();
-        verify(paymentService, times(1)).getPaymentStatusById(PaymentTypeTO.BULK, PAYMENT_ID, TransactionStatus.RCVD, CONSENT_DATA_BYTES);
+        verify(paymentService, times(1)).getPaymentStatusById(PaymentTypeTO.BULK, JSON_ACCEPT_MEDIA_TYPE, PAYMENT_ID, TransactionStatus.RCVD, CONSENT_DATA_BYTES);
     }
 
     @Test
